Refactoring to an ArrayList