@@ -8,20 +8,17 @@ import org.json.simple.JSONObject;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.util.LinkedHashMap;
-import java.util.LinkedList;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 public class View
 {
    private JSONArray list; // This is the overarching structure of the JSON
-   private LinkedList<Location> iti; // A LinkedList of Locations in the shortest order
+   private ArrayList<Location> iti; // A LinkedList of Locations in the shortest order
 
     /////////////////////////////////
     // Constructor                 //
     /////////////////////////////////
-    public View(LinkedList<Location> iti) {
+    public View(ArrayList<Location> iti) {
        this.iti = iti;
        list = new JSONArray();
     }
@@ -30,8 +27,8 @@ public class View
     /////////////////////////////////
     // Some Getters and Setters    //
     /////////////////////////////////
-    public LinkedList<Location> getIti () {return iti;}
-    public void setIti (LinkedList<Location> linkedList) {
+    public ArrayList<Location> getIti () {return iti;}
+    public void setIti (ArrayList<Location> linkedList) {
        this.iti = linkedList;
     }
 
@@ -41,7 +38,7 @@ public class View
     // "Start Location" or a "End Location"    //
     /////////////////////////////////////////////
     public JSONObject createLocationInfo(Location location) {
-        Location firstLocation = iti.getFirst();
+        Location firstLocation = iti.get(0);
         Map information = new LinkedHashMap<String,String>(); // A Map is necessary for ordering
         Set<String> columnNames = firstLocation.getColumnNames(); // Get a Set of all possible information
                                                                   // IE: "Elevation" or "Latitude"
